# sacpi

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  acpi.c  config.h.in  configure  configure.ac  sacpi  sacpi.c
