#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.72])
AC_INIT([sacpi],[1.0.2],[BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([sacpi.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC


# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h unistd.h string.h dirent.h stdio.h getopt.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SSIZE_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
